--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,65 @@
- version: "3.8"
- services: 
+version: '3.8'
+services:
+    # PHP services
     php:
-      build: 
-        context: .
-        target: php
-        args: 
-          -  APP_ENV=${APP_ENV}
-      environment: 
-        -  APP_ENV=${APP_ENV}
-        -  CONTAINER_ROLE=app
-      working_dir: /var/www
-      volumes: 
-        -  ./:/var/www
-      ports:
-        -  8000:8000
-      depends_on:
-        -  database
-        -  redis
+        build:
+            context: .
+            target: php
+            args:
+                - APP_ENV=${APP_ENV}
+        environment:
+            - APP_ENV=${APP_ENV}
+            - CONTAINER_ROLE=app
+        working_dir: /var/www
+        volumes:
+            - ./:/var/www
+        ports:
+            - 8003:8003
+        depends_on:
+            - database
+            - redis
 
-    # Databse server
+    # Database server
     database:
-      image: mysql:8.0
-      ports: 
-        -  3000:3306
-      environment:
-        -  MYSQL_DATABASE=${DB_DATABASE}
-        -  MYSQL_USER=${DB_USERNAME}
-        -  MYSQL_PASSWORD=${DB_PASSWORD}
-        -  MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-      volumes:
-        -  db-data:/var/lib/mysql 
-    redis: 
-      image: redis:alpine
-      command: redis-server --appendonly yes --requirepass  "${REDIS_PASSWORD}"
-      ports: 
-        -  6379:6379
+        image: mysql:8.0
+        restart: always
+        ports:
+            - 3309:3306
+        environment:
+            - MYSQL_DATABASE=${DB_DATABASE}
+            - MYSQL_USER=${DB_USERNAME}
+            - MYSQL_PASSWORD=${DB_PASSWORD}
+            - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+        volumes:
+            - db-data:/var/lib/mysql
+    redis:
+        image: redis:alpine
+        command: redis-server --appendonly yes --requirepass "${REDIS_PASSWORD}"
+        ports:
+            - 6382:6378
 
- volumes:
+    # Queue Server
+    queue:
+        build:
+            context: .
+            target: php
+            args:
+                - APP_ENV=${APP_ENV}
+        environment:
+            - APP_ENV=${APP_ENV}
+            - CONTAINER_ROLE=queue
+        working_dir: /var/www
+        volumes:
+            - ./:/var/www
+
+    # Node Server
+    node:
+        build:
+            context: .
+            target: node
+        volumes:
+            - .:/usr/src
+            - ./node_modules:/usr/src/node_modules
+        tty: true
+volumes:
     db-data: ~
